# edge-ai

./: .checkov.yml  .cspell-dictionary.txt  .cspell.json  .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  .grype.yaml  .hadolint.yaml  .markdownlint.json  .markdownlint.yaml  .markdownlintignore  .mega-linter.yml  .npmrc  .prettierignore  .prettierrc.json  .ruff.toml  .secretlintignore  .security-gate.yml  .shellcheckrc  .syft.yaml  .terraform-docs.yml  .terrascan.toml  .tflint.hcl  .v8rignore  .v8rrc.yml  .yamllint.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  GitVersion.yml  PSScriptAnalyzerSettings.psd1  README.md  SECURITY.md  SUPPORT.md  _config.yml  azure-pipelines-dep-scan.yml  azure-pipelines.yml  bicepconfig.json  (+16 more)
.ai-team/: decisions.md  team.md
.azdo/: README.md  megalinter.md  (+16 more)
src/500-application/501-rust-telemetry/services/receiver/fuzz/: .gitignore  Cargo.toml
src/500-application/501-rust-telemetry/services/receiver/fuzz/fuzz_targets/: parse_telemetry.rs
src/500-application/501-rust-telemetry/services/sender/: Cargo.toml  Dockerfile
src/500-application/501-rust-telemetry/services/sender/.cargo/: audit.toml
src/500-application/501-rust-telemetry/services/sender/src/: main.rs  otel.rs
src/500-application/502-rust-http-connector/services/broker/: Cargo.toml  Dockerfile
src/500-application/502-rust-http-connector/services/broker/.cargo/: audit.toml
src/500-application/502-rust-http-connector/services/broker/src/: error.rs  error_handler.rs  json_validator.rs  libs.rs  main.rs  mqtt_publisher.rs  uptime_monitor.rs
src/500-application/502-rust-http-connector/services/subscriber/: Cargo.toml  Dockerfile
src/500-application/502-rust-http-connector/services/subscriber/.cargo/: config.toml
src/500-application/502-rust-http-connector/services/subscriber/src/: main.rs
src/500-application/503-media-capture-service/services/media-capture-service/: Cargo.toml  Dockerfile  run.sh
src/500-application/503-media-capture-service/services/media-capture-service/.cargo/: audit.toml  config.toml
src/500-application/503-media-capture-service/services/media-capture-service/sample-data/: alert-true.json  analytics-disabled.json  manual-trigger.json
src/500-application/503-media-capture-service/services/media-capture-service/src/: acsa_writer.rs  continuous_recorder.rs  lib.rs  mqtt_handler.rs  multi_trigger.rs  multi_trigger_binary.rs  video_processor.rs  video_ring_buffer.rs  video_writer.rs
src/500-application/504-mqtt-otel-trace-exporter/services/mqtt-otel-trace-exporter/: Cargo.toml  Dockerfile
src/500-application/504-mqtt-otel-trace-exporter/services/mqtt-otel-trace-exporter/.cargo/: audit.toml  config.toml
src/500-application/504-mqtt-otel-trace-exporter/services/mqtt-otel-trace-exporter/src/: config.rs  correlation.rs  health.rs  logging.rs  main.rs  mqtt_client.rs  tracing.rs
src/500-application/506-ros2-connector/resources/ros-interfaces/edge-ros-interface/: CMakeLists.txt  package.xml
src/500-application/506-ros2-connector/resources/ros-interfaces/edge-ros-interface/msg/: MetricValue.msg  Metrics.msg
src/500-application/507-ai-inference/services/ai-edge-inference/: Cargo.toml  Dockerfile  Dockerfile.acr  Dockerfile.unified  README.md
src/500-application/507-ai-inference/services/ai-edge-inference-crate/: Cargo.toml  README.md
src/500-application/507-ai-inference/services/ai-edge-inference-crate/.cargo/: config.toml
src/500-application/507-ai-inference/services/ai-edge-inference-crate/examples/: basic_usage.rs
src/500-application/507-ai-inference/services/ai-edge-inference-crate/src/: backend.rs  config.rs  engine.rs  error.rs  lib.rs  model_config.rs  models.rs  postprocessing.rs  preprocessing.rs  types.rs
src/500-application/507-ai-inference/services/ai-edge-inference-crate/src/backends/: candle.rs  mod.rs  onnx.rs
src/500-application/507-ai-inference/services/ai-edge-inference-crate/tests/: backend_integration.rs
src/500-application/507-ai-inference/services/ai-edge-inference-crate/tests/no-features-test/: Cargo.toml
src/500-application/507-ai-inference/services/ai-edge-inference-crate/tests/no-features-test/src/: main.rs
src/500-application/507-ai-inference/services/ai-edge-inference/.cargo/: audit.toml  config.toml
src/500-application/507-ai-inference/services/ai-edge-inference/scripts/: deploy.sh
src/500-application/507-ai-inference/services/ai-edge-inference/src/: config.rs  health.rs  health_simple.rs  inference.rs  main.rs  message_handler.rs  metrics.rs  models.rs  mqtt.rs  rate_limiter.rs  topic_router.rs
src/500-application/507-ai-inference/services/ai-edge-inference/tests/: README.md  test-mobilenet-dual-backend.sh  test-mqtt-inference.sh  test-real-inference.py  test-yolov2-dual-backend.sh
src/500-application/511-rust-embedded-wasm-provider/operators/custom-provider/: Cargo.toml
src/500-application/511-rust-embedded-wasm-provider/operators/custom-provider/src/: lib.rs
src/500-application/511-rust-embedded-wasm-provider/operators/custom-provider/wit/: custom.wit
src/500-application/511-rust-embedded-wasm-provider/operators/map/: Cargo.toml
src/500-application/511-rust-embedded-wasm-provider/operators/map/src/: lib.rs
src/500-application/511-rust-embedded-wasm-provider/operators/map/wit/: custom.wit
src/500-application/512-avro-to-json/operators/avro-to-json/: Cargo.toml
src/500-application/512-avro-to-json/operators/avro-to-json/.cargo/: audit.toml
src/500-application/512-avro-to-json/operators/avro-to-json/src/: lib.rs
src/500-application/514-wasm-msg-to-dss/operators/dss-enricher-key/: Cargo.toml
src/500-application/514-wasm-msg-to-dss/operators/dss-enricher-key/src/: lib.rs
src/500-application/514-wasm-msg-to-dss/operators/msg-to-dss-key/: Cargo.toml
src/500-application/514-wasm-msg-to-dss/operators/msg-to-dss-key/src/: enricher.rs  lib.rs
src/900-tools-utilities/901-video-tools/cli/video-to-gif/: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
src/900-tools-utilities/901-video-tools/cli/video-to-gif/src/: converter.rs  main.rs
(+3476 files in other folders)
