# Workspace disabled - each Rust service has independent Cargo.lock for microservices architecture
# This supports:
# - Independent service deployment lifecycles
# - Per-service SBOMs for supply chain security
# - Simplified Docker builds (lockfile in build context)
# - Service-level dependency evolution

[workspace]
members = []
resolver = "2"

