[package]
name = "sender"
version = "0.1.0"
edition = "2021"

# We don't need the [[bin]] section as the binary name will default to the package name
# when there's a src/main.rs file

[dependencies]
# Core async runtime
tokio = { version = "1.14.0", features = ["full"] }

# Azure IoT Operations dependencies
azure_iot_operations_protocol = { version = "0.9.0", registry = "aio-sdks" }
azure_iot_operations_mqtt = { version = "0.9.0", registry = "aio-sdks" }
azure_iot_operations_services = { version = "0.8.0", registry = "aio-sdks", features = ["state_store"] }

# Serialization/deserialization
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.73"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging and telemetry
tracing = { version = "0.1", features = ["std", "attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry", "std", "fmt"] }
tracing-opentelemetry = "0.30"
opentelemetry = { version = "0.29" }
opentelemetry_sdk = { version = "0.29", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.29", features = ["grpc-tonic"] }

# Other
async-trait = "0.1.88"
