[package]
name = "http-connector"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "http-connector"
path = "src/main.rs"

[dependencies]
futures = "0.3.17"
jsonschema = "0.26"
reqwest = "0.11.6"
rustls = "0.23.8"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.73"
tokio = { version = "1.14.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
azure_iot_operations_mqtt = { version = "0.9.0", registry = "aio-sdks" }
windows-sys = { version = "0.52.0" }
tokio-retry = "0.3"

[profile.release]
strip = true
