[package]
name = "subscriber"
version = "0.1.0"
edition = "2021"

# We don't need the [[bin]] section as the binary name will default to the package name
# when there's a src/main.rs file

[dependencies]
# Core async runtime
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.14.0", features = ["full"] }
azure_iot_operations_mqtt = { version = "0.9.0", registry = "aio-sdks" }

[lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }

[profile.release]
strip = true

[workspace]
