[package]
name = "media-capture-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "multi_trigger"
path = "src/multi_trigger_binary.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = "0.11.6"
tokio = { version = "1.14.0", features = ["full"] }
lazy_static = "1.4.0"
rumqttc = "0.24.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.73"
rustls-native-certs = { version = "0.7.0"}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
azure_iot_operations_mqtt = { version = "0.9.0", registry = "aio-sdks" }
tokio-stream = { version = "0.1", features = ["fs"] }
futures-util = "0.3.31"
opencv = { version = "0.94.4", features = ["videoio", "imgproc", "highgui", "clang-runtime"] }
ffmpeg-next = "7.1.0"
uuid = { version = "1.17.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.2"
filetime = "0.2"
futures-util = "0.3.31"
opencv = { version = "0.94.4", features = ["videoio", "imgproc", "highgui", "clang-runtime"] }
ffmpeg-next = "7.1.0"
uuid = { version = "1.17.0", features = ["v4"] }
