[package]
name = "ai-edge-mqtt-publisher"
version = "0.2.0"
edition = "2021"
authors = ["Edge AI Team"]
description = "MQTT Publisher Service for AI Edge Inference results using ai-edge-inference-crate"
license = "MIT"

[[bin]]
name = "ai-edge-mqtt-publisher"
path = "src/main.rs"

[dependencies]
# AI Inference Library (with both ONNX and Candle backends for comprehensive testing)
ai-edge-inference-crate = { path = "../ai-edge-inference-crate", default-features = false, features = ["onnx-runtime", "candle", "cpu-only"] }

# Azure IoT Operations SDKs - Updated for AIO 2508 compatibility
azure_iot_operations_mqtt = { version = "0.9.0", registry = "aio-sdks" }
azure_iot_operations_protocol = { version = "0.9.0", registry = "aio-sdks" }
azure_iot_operations_services = { version = "0.8.0", registry = "aio-sdks", features = ["state_store"] }

# MQTT Client (alternative to AIO MQTT for broader compatibility)
rumqttc = { version = "0.24", features = ["use-rustls"] }
tokio-rustls = "0.25"

# Async runtime and utilities
tokio = { version = "1.14.0", features = ["full", "signal"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.73"
serde_yaml = "0.9"

# Configuration and environment
config = "0.14"
envy = "0.4"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.27"

# HTTP server for health checks
warp = "0.3"

# Monitoring and metrics
prometheus = { version = "0.14", features = ["process"] }
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.7.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
image = "0.24"
lazy_static = "1.4"
once_cell = "1.19"
bytes = "1.5"
base64 = "0.22"

# Concurrency
parking_lot = "0.12"
crossbeam = "0.8"
rayon = "1.8"

# File system operations
walkdir = "2.4"
notify = "7.0"

[dev-dependencies]
serial_test = "3.0"
tempfile = "3.8"
mockall = "0.12"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = ["onnx-runtime"]
onnx-runtime = []
gpu = []
cpu-only = []

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true
overflow-checks = true

[workspace]
resolver = "2"
