[package]
name = "map-custom"
version = "1.0.0"
license = "MIT"
edition = "2021"

[dependencies]
image = { version = "0.24" }
wit-bindgen = "0.22"
wasm_graph_sdk = { version = "=1.1.3", registry = "aio-sdks" }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }

[lib]
crate-type = ["cdylib"]

[lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
missing_safety_doc = "allow"

[workspace]
