[package]
name = "avro-to-json"
version = "1.0.0"
license = "MIT"
edition = "2021"
description = "Map operator that transforms Avro binary data to JSON"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.22"
wasm_graph_sdk = { version = "=1.1.3", registry = "aio-sdks" }
apache-avro = { version = "0.17", default-features = false }
serde_json = { version = "1", default-features = false, features = ["alloc"] }

[dev-dependencies]
uuid = "1"

[profile.release]
opt-level = "s"
lto = true
panic = "abort"
codegen-units = 1
strip = true

[workspace]
