[package]
name = "dss-enricher-key"
version = "1.0.0"
license = "MIT"
edition = "2021"
description = "Map operator that enriches messages with data from the AIO Distributed State Store using dynamic key lookup"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.22"
wasm_graph_sdk = { version = "=1.1.3", registry = "aio-sdks" }
serde_json = { version = "1", default-features = false, features = ["alloc", "preserve_order"] }

[lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
missing_safety_doc = "allow"
result_large_err = "allow"

[profile.release]
opt-level = "s"
lto = true
panic = "abort"
codegen-units = 1
strip = true

[workspace]
